creating calculator object each time

--- a/calculatorTestResults.html
+++ b/calculatorTestResults.html
@@ -12,6 +12,8 @@
      </div>
      <script src="https://code.jquery.com/qunit/qunit-2.0.1.js"></script>
      <script src="calculator_tests.js"></script>
-     <script src="calculator_start.js"></script>
+     <script src="calculator_start.js">
+         var calculator = new Calculator();
+    </script>
 </body>
 </html>
