--- a/calculator_start.html
+++ b/calculator_start.html
@@ -11,6 +11,10 @@
  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 
+<script>
+    var calculator = new Calculator();
+</script>
+
 <body>
     <div class="container">
         <h1>Calculator App</h1>
