--- a/calculator_start.html
+++ b/calculator_start.html
@@ -28,85 +28,85 @@
             </p>
             <p>
                 <div class="btn-group">
-                    <button type="button" onclick="allClear()" class="btn btn-danger">AC</button>
-                    <button type="button" onclick="pleaseClear()" class="btn btn-danger">C</button>
+                    <button type="button" onclick="this.allClear()" class="btn btn-danger">AC</button>
+                    <button type="button" onclick="this.pleaseClear()" class="btn btn-danger">C</button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" onclick="changeSign()" class="btn btn-primary">+/-</button>
-                    <button type="button" onclick="percentage()" class="btn btn-primary">%</button>
-                    <button type="button" onclick="factorial()" class="btn btn-primary">!x</button>
-                </div>
-            </p>
-            <p>
-                <div class="btn-group">
-                    <button type="button" onclick="modeDegree('trigMode')" class="btn btn-warning">TRIGMODE: Degrees</button>
-                    <button type="button" onclick="modeRadian('trigMode')" class="btn btn-warning">TRIGMODE: Radians</button>
+                    <button type="button" onclick="this.changeSign()" class="btn btn-primary">+/-</button>
+                    <button type="button" onclick="this.percentage()" class="btn btn-primary">%</button>
+                    <button type="button" onclick="this.factorial()" class="btn btn-primary">!x</button>
                 </div>
             </p>
             <p>
                 <div class="btn-group">
-                    <button type="button" onclick="mySin()" class="btn btn-primary">sin</button>
-                    <button type="button" onclick="myCos()" class="btn btn-primary">cos</button>
-                    <button type="button" onclick="myTan()" class="btn btn-primary">tan</button>
-                    <button type="button" onclick="toRadian()" id="rad" class="btn btn-primary">toRad</button>
-                    <button type="button" onclick="toDegree()" id="deg" class="btn btn-primary">toDeg</button>
+                    <button type="button" onclick="this.modeDegree('trigMode')" class="btn btn-warning">TRIGMODE: Degrees</button>
+                    <button type="button" onclick="this.modeRadian('trigMode')" class="btn btn-warning">TRIGMODE: Radians</button>
                 </div>
             </p>
             <p>
                 <div class="btn-group">
-                    <button type="button" onclick="ms()" class="btn btn-warning">ms</button>
-                    <button type="button" onclick="mr()" class="btn btn-warning">mr</button>
-                    <button type="button" onclick="mplus()" class="btn btn-warning">m+</button>
-                    <button type="button" onclick="mminus()" class="btn btn-warning">m-</button>
+                    <button type="button" onclick="this.mySin()" class="btn btn-primary">sin</button>
+                    <button type="button" onclick="this.myCos()" class="btn btn-primary">cos</button>
+                    <button type="button" onclick="this.myTan()" class="btn btn-primary">tan</button>
+                    <button type="button" onclick="this.toRadian()" id="rad" class="btn btn-primary">toRad</button>
+                    <button type="button" onclick="this.toDegree()" id="deg" class="btn btn-primary">toDeg</button>
+                </div>
+            </p>
+            <p>
+                <div class="btn-group">
+                    <button type="button" onclick="this.ms()" class="btn btn-warning">ms</button>
+                    <button type="button" onclick="this.mr()" class="btn btn-warning">mr</button>
+                    <button type="button" onclick="this.mplus()" class="btn btn-warning">m+</button>
+                    <button type="button" onclick="this.mminus()" class="btn btn-warning">m-</button>
                 </div> <div class="btn-group">
-                        <button type="button" onclick="inverse()" class="btn btn-primary">1/x</button>
+                        <button type="button" onclick="this.inverse()" class="btn btn-primary">1/x</button>
                 </div>
             </p>
             <p>
                 <div class="btn-group">
-                    <button type="button" onclick="addDigit('7')" class="btn btn-success">7</button>
-                    <button type="button" onclick="addDigit('8')" class="btn btn-success">8</button>
-                    <button type="button" onclick="addDigit('9')" class="btn btn-success">9</button>
+                    <button type="button" onclick="this.addDigit('7')" class="btn btn-success">7</button>
+                    <button type="button" onclick="this.addDigit('8')" class="btn btn-success">8</button>
+                    <button type="button" onclick="this.addDigit('9')" class="btn btn-success">9</button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" onclick="storeOperator('/')" class="btn btn-primary">/</button>
-                    <button type="button" onclick="square()" class="btn btn-primary">x^2</button>
-                    <button type="button" onclick="storeOperator('^')" class="btn btn-primary">^</button>
-                </div>
-            </p>
-            <p>
-                <div class="btn-group">
-                    <button type="button" onclick="addDigit('4')" class="btn btn-success">4</button>
-                    <button type="button" onclick="addDigit('5')" class="btn btn-success">5</button>
-                    <button type="button" onclick="addDigit('6')" class="btn btn-success">6</button>
-                </div>
-                <div class="btn-group">
-                    <button type="button" onclick="storeOperator('*')" class="btn btn-primary">*</button>
-                    <button type="button" onclick="squareRoot()" class="btn btn-primary">√x</button>
+                    <button type="button" onclick="this.storeOperator('/')" class="btn btn-primary">/</button>
+                    <button type="button" onclick="this.square()" class="btn btn-primary">x^2</button>
+                    <button type="button" onclick="this.storeOperator('^')" class="btn btn-primary">^</button>
                 </div>
             </p>
             <p>
                 <div class="btn-group">
-                    <button type="button" onclick="addDigit('1')" class="btn btn-success">1</button>
-                    <button type="button" onclick="addDigit('2')" class="btn btn-success">2</button>
-                    <button type="button" onclick="addDigit('3')" class="btn btn-success">3</button>
+                    <button type="button" onclick="this.addDigit('4')" class="btn btn-success">4</button>
+                    <button type="button" onclick="this.addDigit('5')" class="btn btn-success">5</button>
+                    <button type="button" onclick="this.addDigit('6')" class="btn btn-success">6</button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" onclick="storeOperator('-')" class="btn btn-primary">-</button>
-                    <button type="button" onclick="pi()" class="btn btn-primary">π</button>
+                    <button type="button" onclick="this.storeOperator('*')" class="btn btn-primary">*</button>
+                    <button type="button" onclick="this.squareRoot()" class="btn btn-primary">√x</button>
+                </div>
+            </p>
+            <p>
+                <div class="btn-group">
+                    <button type="button" onclick="this.addDigit('1')" class="btn btn-success">1</button>
+                    <button type="button" onclick="this.addDigit('2')" class="btn btn-success">2</button>
+                    <button type="button" onclick="this.addDigit('3')" class="btn btn-success">3</button>
+                </div>
+                <div class="btn-group">
+                    <button type="button" onclick="this.storeOperator('-')" class="btn btn-primary">-</button>
+                    <button type="button" onclick="this.pi()" class="btn btn-primary">π</button>
 
                 </div>
             </p>
             <p>
                 <div class="btn-group">
-                    <button type="button" onclick="addDecimal()" class="btn btn-primary">.</button>
+                    <button type="button" onclick="this.addDecimal()" class="btn btn-primary">.</button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" onclick="addDigit('0')" class="btn btn-success">0</button>
+                    <button type="button" onclick="this.addDigit('0')" class="btn btn-success">0</button>
                 </div>
                 <div class="btn-group">
-                    <button type="button" onclick="calculate()" class="btn btn-primary">=</button>
-                    <button type="button" onclick="storeOperator('+')" class="btn btn-primary">+</button>
+                    <button type="button" onclick="this.calculate()" class="btn btn-primary">=</button>
+                    <button type="button" onclick="this.storeOperator('+')" class="btn btn-primary">+</button>
                 </div>
             </p>
         </form>
